--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -95,8 +95,10 @@ jobs:
         EOF
     - name: commit and push flake.nix, if it changed
       run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add flake.nix
-        git commit -m "update flake.nix to release ${{ steps.date.outputs.date }}"
-        git push origin HEAD:main
+        if [[ "$(git status --porcelain)" != "" ]]; then
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add flake.nix
+          git commit -m "update flake.nix to release ${{ steps.date.outputs.date }}"
+          git push origin HEAD:main
+        fi
