--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,14 +14,19 @@ jobs:
             indexName: x86_64-linux
           - os: macos-latest
             indexName: x86_64-darwin
+          - os: ubuntu-latest
+            indexName: aarch64-linux
     name: Build database
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v18
       with:
         nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixpkgs-unstable.tar.gz
+    - run: |
+        sudo apt-get update -q -y && sudo apt-get install -q -y qemu-system-aarch64 qemu-efi binfmt-support qemu-user-static
+        sudo bash -c "echo system-features = aarch64-linux arm-linux >> /etc/nix/nix.conf"
     - name: run nix-index
-      run: nix-shell -p nix-index --command "nix-index --db ./${{ matrix.indexName }}-index 2>&1 | grep -v '+ generating index'"
+      run: nix-shell -p nix-index --command "nix-index --db ./${{ matrix.indexName }}-index 2>&1 | grep -v '+ generating index'" --option system ${{ matrix.indexName }} --extra-platforms ${{ matrix.indexName }}
     - name: upload artifact
       uses: actions/upload-artifact@v3
       with:
@@ -32,18 +37,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: index
     steps:
-    - name: download linux artifact
+    - name: download x86_64-linux artifact
       uses: actions/download-artifact@v3
       with:
         name: x86_64-linux
-        path: linux-index
-    - run: mv linux-index/files index-x86_64-linux
-    - name: download darwin artifact
+        path: x86_64-linux-index
+    - run: mv x86_64-linux-index/files index-x86_64-linux
+    - name: download x86_64-darwin artifact
       uses: actions/download-artifact@v3
       with:
         name: x86_64-darwin
-        path: darwin-index
-    - run: mv darwin-index/files index-x86_64-darwin
+        path: x86_64-darwin-index
+    - run: mv x86_64-darwin-index/files index-x86_64-darwin
+    - name: download aarch64-linux artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: aarch64-linux
+        path: aarch64-linux-index
+    - run: mv aarch64-linux-index/files index-aarch64-linux
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
@@ -58,6 +69,7 @@ jobs:
         files: |
           index-x86_64-linux
           index-x86_64-darwin
+          index-aarch64-linux
 
   update-flake:
     runs-on: ubuntu-latest
@@ -68,12 +80,15 @@ jobs:
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-    - name: prefetch linux index
-      id: prefetch-linux
+    - name: prefetch x86_64-linux index
+      id: prefetch-x86_64-linux
       run: echo "::set-output name=hash::$(nix shell nixpkgs#nix-prefetch -c nix-prefetch-url https://github.com/${{ github.repository }}/releases/download/${{ steps.date.outputs.date }}/index-x86_64-linux)"
-    - name: prefetch darwin index
-      id: prefetch-darwin
+    - name: prefetch x86_64-darwin index
+      id: prefetch-x86_64-darwin
       run: echo "::set-output name=hash::$(nix shell nixpkgs#nix-prefetch -c nix-prefetch-url https://github.com/${{ github.repository }}/releases/download/${{ steps.date.outputs.date }}/index-x86_64-darwin)"
+    - name: prefetch aarch64-linux index
+      id: prefetch-aarch64-linux
+      run: echo "::set-output name=hash::$(nix shell nixpkgs#nix-prefetch -c nix-prefetch-url https://github.com/${{ github.repository }}/releases/download/${{ steps.date.outputs.date }}/index-aarch64-linux)"
     - name: overwrite flake.nix
       run: |
         cat > flake.nix << EOF
@@ -84,11 +99,15 @@ jobs:
             {
               legacyPackages.x86_64-linux.database = builtins.fetchurl {
                 url = "https://github.com/${{ github.repository }}/releases/download/${{ steps.date.outputs.date }}/index-x86_64-linux";
-                sha256 = "${{ steps.prefetch-linux.outputs.hash }}";
+                sha256 = "${{ steps.prefetch-x86_64-linux.outputs.hash }}";
               };
               legacyPackages.x86_64-darwin.database = builtins.fetchurl {
                 url = "https://github.com/${{ github.repository }}/releases/download/${{ steps.date.outputs.date }}/index-x86_64-darwin";
-                sha256 = "${{ steps.prefetch-darwin.outputs.hash }}";
+                sha256 = "${{ steps.prefetch-x86_64-darwin.outputs.hash }}";
+              };
+              legacyPackages.aarch64-linux.database = builtins.fetchurl {
+                url = "https://github.com/${{ github.repository }}/releases/download/${{ steps.date.outputs.date }}/index-aarch64-linux";
+                sha256 = "${{ steps.prefetch-aarch64-linux.outputs.hash }}";
               };
             };
         }
