--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,6 +22,7 @@ jobs:
     - uses: cachix/install-nix-action@v18
       with:
         nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixpkgs-unstable.tar.gz
+        extra_nix_config: 'access-tokens = github.com=${{ github.token }}'
     - run: |
         sudo apt-get update -q -y && sudo apt-get install -q -y qemu-system-aarch64 qemu-efi binfmt-support qemu-user-static
         sudo bash -c "echo system-features = aarch64-linux arm-linux >> /etc/nix/nix.conf"
@@ -77,6 +78,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v18
+      extra_nix_config: 'access-tokens = github.com=${{ github.token }}'
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
@@ -112,6 +114,10 @@ jobs:
             };
         }
         EOF
+    - name: test if flake works
+      run: |
+        nix flake show
+        nix flake check -L
     - name: commit and push flake.nix, if it changed
       run: |
         if [[ "$(git status --porcelain)" != "" ]]; then
