--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -78,7 +78,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v18
-      extra_nix_config: 'access-tokens = github.com=${{ github.token }}'
+      with:
+        extra_nix_config: 'access-tokens = github.com=${{ github.token }}'
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
