--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,6 +21,12 @@ jobs:
       with:
         nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixpkgs-unstable.tar.gz
         extra_nix_config: 'access-tokens = github.com=${{ github.token }}'
+    # for nix-index
+    - name: Setup cachix
+      uses: cachix/cachix-action@v12
+      with:
+        name: ${{ matrix.cachixName }}
+        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
     - name: run nix-index
       run: nix run github:Mic92/nix-index/docs -- --db ./${{ matrix.indexName }}-index --system ${{matrix.indexName}}
     - name: upload artifact
