disable i686-linux again
No time to fix this.

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,7 +12,8 @@ jobs:
         include:
           - indexName: x86_64-linux
           - indexName: aarch64-linux
-          - indexName: i686-linux
+          # breaks often and no one fixes it
+          #- indexName: i686-linux
           - indexName: x86_64-darwin
           - indexName: aarch64-darwin
     name: Build database
