--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -47,7 +47,9 @@ jobs:
     - uses: cachix/install-nix-action@v21
       with:
         nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixpkgs-unstable.tar.gz
-        extra_nix_config: 'access-tokens = github.com=${{ github.token }}'
+        extra_nix_config: |
+          access-tokens = github.com=${{ github.token }}
+          system-features = nixos-test benchmark big-parallel kvm
     # for nix-index
     - name: Setup cachix
       uses: cachix/cachix-action@v12
