Update the flake.lock before regenerating the index.

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -56,6 +56,12 @@ jobs:
       with:
         name: mic92
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+    - name: Update the flake lock
+      run: |
+        nix flake update --commit-lock-file
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git push origin HEAD:main
     - name: run nix-index
       run: nix shell --inputs-from .# nixpkgs#nix-index -c nix-index --db ./${{ matrix.indexName }}-index --system ${{matrix.indexName}} 2>&1 | grep -v '+ generating index:'
     - name: upload artifact
