--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -176,7 +176,7 @@ jobs:
         EOF
     - name: test if flake works
       run: |
-        nix flake show
+        nix flake show --all-systems
         # We don't want to build the checks since we don't have virtualisation support on github runners
         nix flake check -L --all-systems --no-build
     - name: commit and push packages.nix, if it changed
