--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -137,7 +137,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        ref: "${{ GITHUB_REF }}"
+        ref: "${{ github.ref_name }}"
     - uses: cachix/install-nix-action@v22
       with:
         extra_nix_config: 'access-tokens = github.com=${{ github.token }}'
